# particles

./: Makefile  README.md  meson.build
assets/: first.mat  output.mat
docs/: class.d2
include/rf/: element.hh  matter.hh  particle.hh  universe.hh
src/: element.cc  main.cc  matter.cc  particle.cc  universe.cc
